# ws-audio-demo

./: .gitignore  README.md
docs/: PROGRESS.md  api-spec.md  architecture.md  test-plan.md
e2e/: package.json  playwright.config.js
e2e/tests/: smoke.spec.js
orchestrator/: build.gradle.kts  gradlew  settings.gradle.kts
orchestrator/src/main/java/com/demo/orchestrator/: OrchestratorApplication.java
orchestrator/src/main/java/com/demo/orchestrator/api/: AudioController.java  AudioDownloadController.java  GlobalExceptionHandler.java  HealthController.java
orchestrator/src/main/java/com/demo/orchestrator/client/: GrpcPcmClient.java
orchestrator/src/main/resources/: application.yml
orchestrator/src/main/resources/static/: index.html
orchestrator/src/main/resources/static/assets/: index-DIL1yEGX.js  index-rzfxVNC1.css
pcm-service/: pyproject.toml
pcm-service/app/: gain.py  grpc_server.py  processor.py  resample.py  rtf.py  servicer.py
pcm-service/app/pcm/v1/: pcm_pb2.py  pcm_pb2.pyi  pcm_pb2_grpc.py
pcm-service/tests/: test_pcm.py
proto/pcm/v1/: pcm.proto
scripts/: build-all.sh  dev.sh  generate-proto.sh  integration-test.sh  smoke-test.sh  ws_integration_test.py
test-fixtures/: generate.sh
test-fixtures/flac/: tone_10s_24k_mono.flac
web/: index.html  package.json  pnpm-lock.yaml  vite.config.js
web/src/: App.vue  style.css
web/src/components/: PlayerPanel.vue  ProcessPanel.vue  UploadPanel.vue
web/src/composables/: useAudioValidator.js  useFlacEncoder.js  useStreamPlayer.js
(+27 files in other folders)
